--- a/assets/style.css
+++ b/assets/style.css
@@ -496,9 +496,9 @@ h1{
 
 .clock span, .delivery span, .minimun span{
     font-size: 15px;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
-    font-family: 'Pacifico', cursive;
+    
 }
 
 /* contacto */
@@ -562,30 +562,45 @@ form{
 .contacto-alternativo{
     display: flex;
     width: 100%;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    background: url(./images/instagram3.jpg) no-repeat center/cover;
 }
+
+
 
 .redes-sociales{
     display: flex;
     flex-direction: column;
-    color: var(--color-2);
+    color: var(--text-color-2);
     gap: 50px;
     font-size: 24px;
-    -webkit-text-stroke: 1px var(--nav-color);
     font-weight: 600;
-    width: 40%;
+    padding: 20px 0 0 20px;
+    background: linear-gradient(to left, white, rgba(255, 255, 255, 0.616))
+}
+
+
+.redes-sociales h3{
+    padding: 0 0 0 20px;
     
 }
 
+.redes-sociales span{ 
+    color: var(--text-color-2);
+}
+
 .redes-sociales a{
-    color: var(--color-2);
+    color: var(--text-color-2);
     transition: 0.5s ease-out;
-    -webkit-text-stroke: 1px var(--nav-color);
     width: 150px;
 }
 
+.redes-sociales i{
+    color: var(--text-color-2);
+}
+
 .redes-sociales a:hover{
-    color: var(--color-4);
+    color: var(--text-color-1);
     transition: 0.5s ease-in;
 }
 
@@ -596,10 +611,12 @@ form{
 .instagram{
     display: flex;
     flex-direction: column;
-    gap: 10px;
-    color: var(--color-4);
+    gap: 20px;
+    color: var(--text-color-2);
     font-size: 25px;
-    -webkit-text-stroke: 1px var(--nav-color);
+    background: white;
+    padding: 20px 0 0 0;
+    
 }
 
 .instagram h3{
@@ -611,8 +628,7 @@ form{
 }
 
 .instagram a{
-    color: var(--color-4);
-    -webkit-text-stroke: 1px var(--nav-color);
+    color: var(--text-color-2);
     font-weight: 600;
     transition: 0.5s ease-out;
     font-size: 20px;
@@ -624,16 +640,14 @@ form{
 
 .instagram a:hover{
     
-    color: var(--backgroud-color-1);
+    color: var(--text-color-1);
     transition: 0.5s ease-in;
 }
 
 .galeria-insta{
-
     display: grid;
     grid-template-columns: 230px 230px 230px;
     grid-template-rows: 200px 200px 200px;
-    background: white;
     height: 400px;
     gap: 1px;
 }
@@ -648,7 +662,7 @@ form{
 }
 
 .galeria-items:hover{
-    opacity: 90%;
+    opacity: 85%;
     transition: 0.5s ease-out;
 }
 
@@ -680,4 +694,37 @@ form{
 .g-item-6{
     background: url(./images/instagram6.jpg) no-repeat center/cover;
 
+}
+
+/* footer */
+
+footer{
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    background: var(--background-color-2);
+    justify-content: center;
+    align-items: center;
+    padding: 50px 0;
+    width: 100%;
+    font-size: 18px;
+    
+
+}
+
+.footer-links{
+    display: flex;
+    gap: 50px;
+}
+
+.footer-links a{
+    color: white;
+}
+
+footer p{
+    color: white;
+}
+
+footer span{
+    font-weight: 600;
 }
